# squiddy

./: Cargo.toml  README.md
media/: cute-squid-swimming-cartoon-vector-icon-illustration-animal-nature-icon-concept-isolated-premium_138676-6021.avif
src/: main.rs
