[package]
name = "squiddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
serde = "1.0.150"
serde_json = "1.0.89"
humansize = "2.1.2"
clap = { version = "4.0.32", features = ["derive"] }
